# longitudinal-spine-analysis-pipeline

./: .gitignore  README.md  install.sh  pyproject.toml  run.py  setup.py
.github/: CONTRIBUTING.md
docs/: README.md  installation.md  pipeline_plan.md
scripts/: compare_genotypes.py  dry_run.py  dry_run.sh  process_all_segments.py  run_batch.sh  run_test.sh  test_workflow.py
spine_tracker/: analysis.py  metadata_handler.py  spine_registration.py  spine_tracking.py
